# workshops

2026/2026-04-21-end-to-end-agent-deployment/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  agent.py  app.py  main.py  notebook.ipynb  pyproject.toml  renderer.py  schemas.py  search.py
2026/2026-04-21-end-to-end-agent-deployment/.github/workflows/: deploy.yml
2026/2026-04-21-end-to-end-agent-deployment/frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
